provide Nav with strict width to prevent Projects from collapsing over Nav

--- a/app/1/components/projects/Projects.module.css
+++ b/app/1/components/projects/Projects.module.css
@@ -1,6 +1,6 @@
 .Projects {
   color: hsl(0, 0%, 10%);
-  min-width: 30rem;
+  min-width: 25rem;
   overflow: hidden;
 }
 
